# trailbuster

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  basic.py  crawl.py  main.py  pyproject.toml  pytest.ini  quickstart.py  requirements-test.txt  salesforce_auth.py  salesforce_code.py  sample_urls.txt
salesforce/: auth.py  auth_code.py  crawl.py  parse.py
tests/: README.md  conftest.py  run_tests.py  test_helpers.py
tests/fixtures/: test_data.py
tests/integration/: test_crawl.py
tests/unit/: test_parse.py
trailbuster/: __init__.py  logger.py
